--- a/components/printers/design/languages/ideprinting.pb.po
+++ b/components/printers/design/languages/ideprinting.pb.po
@@ -11,7 +11,7 @@ msgstr ""
 
 #: ideprinting.sdescrformatting
 msgid "Formatting"
-msgstr ""
+msgstr "Formatando"
 
 #: ideprinting.sdescrpfselection
 msgid "Print..."
