--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2010-04-24 19:19+0300\n"
+"PO-Revision-Date: 2010-04-26 00:45+0300\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 
@@ -4084,7 +4084,7 @@ msgstr "Предпочтительный режим отображения"
 #: lazarusidestrconsts.lisceomodecategory
 msgctxt "lazarusidestrconsts.lisceomodecategory"
 msgid "Category"
-msgstr "Категория"
+msgstr "Категории"
 
 #: lazarusidestrconsts.lisceomodesource
 msgid "Source"
